deploy/kustomize/infra/base/nats.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: miniserversystem
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: miniserversystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2
          ports:
            - containerPort: 4222
